k8s-deploy/overlays/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system-ingress
  labels:
    app: solar-system
spec:
  ingressClassName: avi-lb
  tls:
  - hosts:
      - solarapps-uat.cloudapps.corp.internal
    secretName: solar-system-cert-tls
  rules:
    - host: solarapps-uat.cloudapps.corp.internal
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: solar-system-service
              port:
                number: 80
